src/main/bkit/parser/.antlr/BKITParser.py
# Generated from /mnt/B25280A152806BC3/BK Cource/201/Principle of Programing Language/Assignment/Assignment #4/assignment4/initial/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", 
                     "'EndWhile'", "'For'", "'Function'", "'Else'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'True'", "'False'", "'EndDo'", "'+'", "'-'", "'*'", 
                     "'\\'", "'%'", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'='", "'=='", "'+.'", "'-.'", "'*.'", "'\\.'", "'=/='", 
                     "'<.'", "'>.'", "'<=.'", "'>=.'", "'!'", "'&&'", "'||'", 
                     "'{'", "'}'", "'['", "']'", "':'", "'.'", "','", "';'", 
                     "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "UNTERMINATED_COMMENT", 
                      "Comment", "StrLit", "IntLit", "FloatLit", "BoolLit", 
                      "ID", "BODY", "BREAK", "CONTINUE", "DO", "ELSEIF", 
                      "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", 
                      "ELSE", "IF", "PARAMETER", "RETURN", "THEN", "VAR", 
                      "WHILE", "TRUE", "FALSE", "ENDDO", "ADD", "SUB", "MUL", 
                      "DIV", "MOD", "NEQ", "ST", "GT", "SE", "GE", "ASSIGN", 
                      "EQ", "ADDF", "SUBF", "MULF", "DIVF", "NEQF", "STF", 
                      "GTF", "SEF", "GEF", "NOT", "AND", "OR", "LB", "RB", 
                      "LS", "RS", "CL", "DOT", "CM", "SC", "LP", "RP", "WS", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_functionDecl = 1
    RULE_paramList = 2
    RULE_param = 3
    RULE_statementList = 4
    RULE_statement = 5
    RULE_callStm = 6
    RULE_doWhileStm = 7
    RULE_whileStm = 8
    RULE_forStm = 9
    RULE_breakStm = 10
    RULE_continueStm = 11
    RULE_returnStm = 12
    RULE_ifStm = 13
    RULE_assignmentStm = 14
    RULE_varDeclStm = 15
    RULE_varDecl = 16
    RULE_arrayVar = 17
    RULE_expression = 18
    RULE_expression1 = 19
    RULE_expression2 = 20
    RULE_expression3 = 21
    RULE_expression4 = 22
    RULE_expression5 = 23
    RULE_expression6 = 24
    RULE_sign = 25
    RULE_multiplying = 26
    RULE_adding = 27
    RULE_logicalBinary = 28
    RULE_operand = 29
    RULE_relationalOp = 30
    RULE_elementExp = 31
    RULE_indexOps = 32
    RULE_functionCall = 33
    RULE_argumentList = 34
    RULE_arrayLit = 35
    RULE_literal = 36

    ruleNames =  [ "program", "functionDecl", "paramList", "param", "statementList", 
                   "statement", "callStm", "doWhileStm", "whileStm", "forStm", 
                   "breakStm", "continueStm", "returnStm", "ifStm", "assignmentStm", 
                   "varDeclStm", "varDecl", "arrayVar", "expression", "expression1", 
                   "expression2", "expression3", "expression4", "expression5", 
                   "expression6", "sign", "multiplying", "adding", "logicalBinary", 
                   "operand", "relationalOp", "elementExp", "indexOps", 
                   "functionCall", "argumentList", "arrayLit", "literal" ]

    EOF = Token.EOF
    ILLEGAL_ESCAPE=1
    UNCLOSE_STRING=2
    UNTERMINATED_COMMENT=3
    Comment=4
    StrLit=5
    IntLit=6
    FloatLit=7
    BoolLit=8
    ID=9
    BODY=10
    BREAK=11
    CONTINUE=12
    DO=13
    ELSEIF=14
    ENDBODY=15
    ENDIF=16
    ENDFOR=17
    ENDWHILE=18
    FOR=19
    FUNCTION=20
    ELSE=21
    IF=22
    PARAMETER=23
    RETURN=24
    THEN=25
    VAR=26
    WHILE=27
    TRUE=28
    FALSE=29
    ENDDO=30
    ADD=31
    SUB=32
    MUL=33
    DIV=34
    MOD=35
    NEQ=36
    ST=37
    GT=38
    SE=39
    GE=40
    ASSIGN=41
    EQ=42
    ADDF=43
    SUBF=44
    MULF=45
    DIVF=46
    NEQF=47
    STF=48
    GTF=49
    SEF=50
    GEF=51
    NOT=52
    AND=53
    OR=54
    LB=55
    RB=56
    LS=57
    RS=58
    CL=59
    DOT=60
    CM=61
    SC=62
    LP=63
    RP=64
    WS=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def varDeclStm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarDeclStmContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarDeclStmContext,i)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.FunctionDeclContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 74
                self.varDeclStm()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 80
                self.functionDecl()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def CL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CL)
            else:
                return self.getToken(BKITParser.CL, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def statementList(self):
            return self.getTypedRuleContext(BKITParser.StatementListContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def paramList(self):
            return self.getTypedRuleContext(BKITParser.ParamListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_functionDecl




    def functionDecl(self):

        localctx = BKITParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(BKITParser.FUNCTION)
            self.state = 89
            self.match(BKITParser.CL)
            self.state = 90
            self.match(BKITParser.ID)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 91
                self.match(BKITParser.PARAMETER)
                self.state = 92
                self.match(BKITParser.CL)
                self.state = 93
                self.paramList()


            self.state = 96
            self.match(BKITParser.BODY)
            self.state = 97
            self.match(BKITParser.CL)
            self.state = 98
            self.statementList()
            self.state = 99
            self.match(BKITParser.ENDBODY)
            self.state = 100
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParamContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParamContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_paramList




    def paramList(self):

        localctx = BKITParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.param()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 103
                self.match(BKITParser.CM)
                self.state = 104
                self.param()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def arrayVar(self):
            return self.getTypedRuleContext(BKITParser.ArrayVarContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param




    def param(self):

        localctx = BKITParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.arrayVar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclStm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarDeclStmContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarDeclStmContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_statementList




    def statementList(self):

        localctx = BKITParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 114
                self.varDeclStm()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 120
                    self.statement() 
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStm(self):
            return self.getTypedRuleContext(BKITParser.AssignmentStmContext,0)


        def ifStm(self):
            return self.getTypedRuleContext(BKITParser.IfStmContext,0)


        def forStm(self):
            return self.getTypedRuleContext(BKITParser.ForStmContext,0)


        def whileStm(self):
            return self.getTypedRuleContext(BKITParser.WhileStmContext,0)


        def doWhileStm(self):
            return self.getTypedRuleContext(BKITParser.DoWhileStmContext,0)


        def callStm(self):
            return self.getTypedRuleContext(BKITParser.CallStmContext,0)


        def returnStm(self):
            return self.getTypedRuleContext(BKITParser.ReturnStmContext,0)


        def breakStm(self):
            return self.getTypedRuleContext(BKITParser.BreakStmContext,0)


        def continueStm(self):
            return self.getTypedRuleContext(BKITParser.ContinueStmContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_statement




    def statement(self):

        localctx = BKITParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.assignmentStm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.ifStm()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.forStm()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.whileStm()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 130
                self.doWhileStm()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.callStm()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 132
                self.returnStm()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 133
                self.breakStm()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 134
                self.continueStm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallStmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionCall(self):
            return self.getTypedRuleContext(BKITParser.FunctionCallContext,0)


        def SC(self):
            return self.getToken(BKITParser.SC, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_callStm




    def callStm(self):

        localctx = BKITParser.CallStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_callStm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.functionCall()
            self.state = 138
            self.match(BKITParser.SC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileStmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(BKITParser.DO, 0)

        def statementList(self):
            return self.getTypedRuleContext(BKITParser.StatementListContext,0)


        def WHILE(self):
            return self.getToken(BKITParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def ENDDO(self):
            return self.getToken(BKITParser.ENDDO, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_doWhileStm




    def doWhileStm(self):

        localctx = BKITParser.DoWhileStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_doWhileStm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(BKITParser.DO)
            self.state = 141
            self.statementList()
            self.state = 142
            self.match(BKITParser.WHILE)
            self.state = 143
            self.expression()
            self.state = 144
            self.match(BKITParser.ENDDO)
            self.state = 145
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(BKITParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def DO(self):
            return self.getToken(BKITParser.DO, 0)

        def statementList(self):
            return self.getTypedRuleContext(BKITParser.StatementListContext,0)


        def ENDWHILE(self):
            return self.getToken(BKITParser.ENDWHILE, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_whileStm




    def whileStm(self):

        localctx = BKITParser.WhileStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(BKITParser.WHILE)
            self.state = 148
            self.expression()
            self.state = 149
            self.match(BKITParser.DO)
            self.state = 150
            self.statementList()
            self.state = 151
            self.match(BKITParser.ENDWHILE)
            self.state = 152
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(BKITParser.FOR, 0)

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpressionContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def DO(self):
            return self.getToken(BKITParser.DO, 0)

        def statementList(self):
            return self.getTypedRuleContext(BKITParser.StatementListContext,0)


        def ENDFOR(self):
            return self.getToken(BKITParser.ENDFOR, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_forStm




    def forStm(self):

        localctx = BKITParser.ForStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forStm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(BKITParser.FOR)
            self.state = 155
            self.match(BKITParser.LP)
            self.state = 156
            self.match(BKITParser.ID)
            self.state = 157
            self.match(BKITParser.ASSIGN)
            self.state = 158
            self.expression()
            self.state = 159
            self.match(BKITParser.CM)
            self.state = 160
            self.expression()
            self.state = 161
            self.match(BKITParser.CM)
            self.state = 162
            self.expression()
            self.state = 163
            self.match(BKITParser.RP)
            self.state = 164
            self.match(BKITParser.DO)
            self.state = 165
            self.statementList()
            self.state = 166
            self.match(BKITParser.ENDFOR)
            self.state = 167
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(BKITParser.BREAK, 0)

        def SC(self):
            return self.getToken(BKITParser.SC, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_breakStm




    def breakStm(self):

        localctx = BKITParser.BreakStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_breakStm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(BKITParser.BREAK)
            self.state = 170
            self.match(BKITParser.SC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinueStmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUE(self):
            return self.getToken(BKITParser.CONTINUE, 0)

        def SC(self):
            return self.getToken(BKITParser.SC, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_continueStm




    def continueStm(self):

        localctx = BKITParser.ContinueStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_continueStm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(BKITParser.CONTINUE)
            self.state = 173
            self.match(BKITParser.SC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(BKITParser.RETURN, 0)

        def SC(self):
            return self.getToken(BKITParser.SC, 0)

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_returnStm




    def returnStm(self):

        localctx = BKITParser.ReturnStmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_returnStm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(BKITParser.RETURN)
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.StrLit) | (1 << BKITParser.IntLit) | (1 << BKITParser.FloatLit) | (1 << BKITParser.BoolLit) | (1 << BKITParser.ID) | (1 << BKITParser.SUB) | (1 << BKITParser.SUBF) | (1 << BKITParser.NOT) | (1 << BKITParser.LB) | (1 << BKITParser.LP))) != 0):
                self.state = 176
                self.expression()


            self.state = 179
            self.match(BKITParser.SC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BKITParser.IF, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpressionContext,i)


        def THEN(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.THEN)
            else:
                return self.getToken(BKITParser.THEN, i)

        def statementList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementListContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementListContext,i)


        def ENDIF(self):
            return self.getToken(BKITParser.ENDIF, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ELSEIF)
            else:
                return self.getToken(BKITParser.ELSEIF, i)

        def ELSE(self):
            return self.getToken(BKITParser.ELSE, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_ifStm




    def ifStm(self):
